# ComfyUI-ChatTTS

./: README.md  __init__.py  extra_nodes.py  extract_speaker.py  loader.py  node.py  pyproject.toml  requirements.txt  sampler.py  speaker_profile.py  speaker_sample.py  text_normalizer.py  text_splitter.py  utils.py
ChatTTS/: core.py
ChatTTS/model/: tokenizer.py
